--- a/compiler/rustc_watt_runtime/Cargo.toml
+++ b/compiler/rustc_watt_runtime/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.0.0"
 edition = "2021"
 description = "WebAssembly runtime for executing procedural macros (vendored from watt)"
 
-# This crate has zero external dependencies, matching the original watt design
 [dependencies]
-# No external dependencies - only uses std and proc_macro
+rustc_proc_macro = { path = "../rustc_proc_macro" }
