--- a/src/tools/rust-analyzer/Cargo.toml
+++ b/src/tools/rust-analyzer/Cargo.toml
@@ -35,6 +35,7 @@ inherits = "release"
 debug = 2
 
 [patch.'crates-io']
+synstructure = { git = "https://github.com/macovedj/synstructure" }
 # rowan = { path = "../rowan" }
 
 # chalk-ir = { path = "../chalk/chalk-ir" }
@@ -239,4 +240,3 @@ print_stdout = "warn"
 print_stderr = "warn"
 
 rc_buffer = "warn"
-str_to_string = "warn"
