--- a/src/tools/clippy/clippy_test_deps/Cargo.toml
+++ b/src/tools/clippy/clippy_test_deps/Cargo.toml
@@ -18,3 +18,7 @@ itertools = "0.12"
 
 # Make sure we are not part of the rustc workspace.
 [workspace]
+
+[patch.crates-io]
+synstructure = { git = "https://github.com/macovedj/synstructure" }
+
